--- a/Source/Mosa.UnitTests/Basic/CallTests.tt
+++ b/Source/Mosa.UnitTests/Basic/CallTests.tt
@@ -1,23 +1,19 @@
 ﻿<#@ include file="../../TemplateLibrary.txt" #>
-using System;
+namespace Mosa.UnitTests.Basic;
 
-namespace Mosa.UnitTests.Basic
+public static class CallTests 
 {
-
-	public static class CallTests 
-	{
 <# foreach (KeyValuePair<string, string> number in IntegersWithChar) { #>
 
-		[MosaUnitTest(Series = "<#= number.Value #>")]
-		public static bool Call<#= number.Value #>(<#= number.Key #> value)
-		{ 
-			return value == CallTarget<#= number.Value #>(value); 
-		} 
+	[MosaUnitTest(Series = "<#= number.Value #>")]
+	public static bool Call<#= number.Value #>(<#= number.Key #> value)
+	{ 
+		return value == CallTarget<#= number.Value #>(value); 
+	} 
 
-		private static <#= number.Key #> CallTarget<#= number.Value #>(<#= number.Key #> value)
-		{ 
-			return value; 
-		}					
-	<# } #>
-	}
+	private static <#= number.Key #> CallTarget<#= number.Value #>(<#= number.Key #> value)
+	{ 
+		return value; 
+	}					
+<# } #>
 }
