--- a/Source/Mosa.UnitTests/Basic/LdargaTests.tt
+++ b/Source/Mosa.UnitTests/Basic/LdargaTests.tt
@@ -1,35 +1,31 @@
 ﻿<#@ include file="../../TemplateLibrary.txt" #>
-using System;
+namespace Mosa.UnitTests.Basic;
 
-namespace Mosa.UnitTests.Basic
+public static class LdargaTests 
 {
+<# foreach (KeyValuePair<string, string> number in NumbersWithCharAndBool) { #>
 
-	public static class LdargaTests 
+	[MosaUnitTest(Series = "<#= number.Value #>")]
+	public static <#= number.Key #> LdargaCheckValue<#= number.Value #>(<#= number.Key #> a)
 	{
-	<# foreach (KeyValuePair<string, string> number in NumbersWithCharAndBool) { #>
-
-		[MosaUnitTest(Series = "<#= number.Value #>")]
-		public static <#= number.Key #> LdargaCheckValue<#= number.Value #>(<#= number.Key #> a)
-		{
-			return LdargaCheckValueRef<#= number.Value #>(ref a);
-		}
-
-		private static <#= number.Key #> LdargaCheckValueRef<#= number.Value #>(ref <#= number.Key #> a)
-		{
-			return a;
-		}
-
-		[MosaUnitTest(Series = "<#= number.Value #><#= number.Value #>")]
-		public static <#= number.Key #> LdargaChangeValue<#= number.Value #>(<#= number.Key #> a, <#= number.Key #> b)
-		{
-			LdargaChangeValueRef<#= number.Value #>(ref a,b);
-			return a;
-		}
-
-		private static void LdargaChangeValueRef<#= number.Value #>(ref <#= number.Key #> a, <#= number.Key #> b)
-		{
-			a = b;
-		}
-	<# } #>
+		return LdargaCheckValueRef<#= number.Value #>(ref a);
 	}
+
+	private static <#= number.Key #> LdargaCheckValueRef<#= number.Value #>(ref <#= number.Key #> a)
+	{
+		return a;
+	}
+
+	[MosaUnitTest(Series = "<#= number.Value #><#= number.Value #>")]
+	public static <#= number.Key #> LdargaChangeValue<#= number.Value #>(<#= number.Key #> a, <#= number.Key #> b)
+	{
+		LdargaChangeValueRef<#= number.Value #>(ref a,b);
+		return a;
+	}
+
+	private static void LdargaChangeValueRef<#= number.Value #>(ref <#= number.Key #> a, <#= number.Key #> b)
+	{
+		a = b;
+	}
+<# } #>
 }
