--- a/Source/Mosa.UnitTests/ValueType/InitStructTests.tt
+++ b/Source/Mosa.UnitTests/ValueType/InitStructTests.tt
@@ -1,26 +1,23 @@
 ﻿<#@ include file="../../TemplateLibrary.txt" #>
+namespace Mosa.UnitTests.ValueType;
 
-// No run-time tests
-
-namespace Mosa.UnitTests.ValueType
+internal struct InitStruct
 {
-	internal struct InitStruct
-	{
 <# foreach (KeyValuePair<string, string> primitives in PrimitivesWithChar) { #>
-		public <#= primitives.Key #> Value<#= primitives.Value #>;
+	public <#= primitives.Key #> Value<#= primitives.Value #>;
 <# } #>
-	}
-
-	public static class InitStructTests
-	{
-<# foreach (KeyValuePair<string, string> primitives in PrimitivesWithChar) {#>
-		[MosaUnitTest]
-		public static <#= primitives.Key #> InitStruct<#= primitives.Value #>()
-		{
-			InitStruct d = new InitStruct();
-			return d.Value<#= primitives.Value #>;
-		}
-
-<# } #>
-	}
 }
+
+public static class InitStructTests
+{
+<# foreach (KeyValuePair<string, string> primitives in PrimitivesWithChar) {#>
+	[MosaUnitTest]
+	public static <#= primitives.Key #> InitStruct<#= primitives.Value #>()
+	{
+		InitStruct d = new InitStruct();
+		return d.Value<#= primitives.Value #>;
+	}
+
+<# } #>
+}
+
