--- a/Source/Mosa.UnitTests/Basic/StaticFieldTests.tt
+++ b/Source/Mosa.UnitTests/Basic/StaticFieldTests.tt
@@ -1,27 +1,24 @@
 ﻿<#@ include file="../../TemplateLibrary.txt" #>
-using System;
+namespace Mosa.UnitTests.Basic;
 
-namespace Mosa.UnitTests.Basic
-{
 <# foreach (KeyValuePair<string, string> number in PrimitivesWithChar) { #>
-	
-	public static class StaticFieldTest<#= number.Value #> 
+public static class StaticFieldTest<#= number.Value #>
+{
+	private static <#= number.Key #> field;
+
+	[MosaUnitTest(Series = "<#= number.Value #>")]
+	public static bool StaticField<#= number.Value #>(<#= number.Key #> value)
 	{
-		private static <#= number.Key #> field;
-
-		[MosaUnitTest(Series = "<#= number.Value #>")]
-		public static bool StaticField<#= number.Value #>(<#= number.Key #> value) 
-		{
-			field = value;
-			return (value == field);
-		}
-
-		[MosaUnitTest(Series = "<#= number.Value #>")]
-		public static <#= number.Key #> StaticReturnField<#= number.Value #>(<#= number.Key #> value) 
-		{
-			field = value;
-			return field;
-		}
+		field = value;
+		return value == field;
 	}
-<# } #>
+
+	[MosaUnitTest(Series = "<#= number.Value #>")]
+	public static <#= number.Key #> StaticReturnField<#= number.Value #>(<#= number.Key #> value)
+	{
+		field = value;
+		return field;
+	}
 }
+
+<# } #>
