--- a/Source/Mosa.UnitTests/ValueType/StructTests.tt
+++ b/Source/Mosa.UnitTests/ValueType/StructTests.tt
@@ -63,4 +63,4 @@ internal struct Struct3<#= number.Value #>
 }
 <# } #>
 
-#pragma warning enabled CS0649 // Fields are never assigned to, and will always have its default value
+#pragma warning restore CS0649 // Fields are never assigned to, and will always have its default value
