--- a/Source/Mosa.Tool.Launcher/MainWindow.axaml
+++ b/Source/Mosa.Tool.Launcher/MainWindow.axaml
@@ -128,6 +128,7 @@
 
 					<Border Name="OtherBox" Margin="265,160,0,0" BorderBrush="LightGray" BorderThickness="1" CornerRadius="3" Padding="4" Height="160" VerticalAlignment="Top" HorizontalAlignment="Left">
 						<StackPanel>
+							<CheckBox FontSize="12" Name="PlugKernel" IsChecked="True">Plug BareMetal Kernel</CheckBox>
 							<CheckBox FontSize="12" Name="PlugKorlib" IsChecked="True">Plug Core Library</CheckBox>
 							<Label Margin="0,5,0,0">OS Name:</Label>
 							<TextBox FontSize="12" Name="OsNameTxt" HorizontalContentAlignment="Center" VerticalAlignment="Bottom" Margin="135,-20,0,90" Width="367" BorderBrush="LightGray">MOSA</TextBox>
