--- a/Source/Mosa.Tool.Bootstrap/App.axaml
+++ b/Source/Mosa.Tool.Bootstrap/App.axaml
@@ -1,7 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="Mosa.Tool.Bootstrap.App">
+             x:Class="Mosa.Tool.Bootstrap.App"
+             RequestedThemeVariant="Default">
     <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+        <FluentTheme/>
     </Application.Styles>
 </Application>
