--- a/Source/Mosa.Tool.Launcher/App.axaml
+++ b/Source/Mosa.Tool.Launcher/App.axaml
@@ -1,7 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="Mosa.Tool.Launcher.App">
-    <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+             x:Class="Mosa.Tool.Launcher.App"
+             RequestedThemeVariant="Default">
+	<Application.Styles>
+        <FluentTheme/>
     </Application.Styles>
 </Application>
