--- a/Source/Mosa.Tool.Launcher/MainWindow.axaml
+++ b/Source/Mosa.Tool.Launcher/MainWindow.axaml
@@ -1,6 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		MaxWidth="801" MaxHeight="582" MinWidth="801" MinHeight="582"
+		MaxWidth="801" MaxHeight="612" MinWidth="801" MinHeight="612"
 		x:Class="Mosa.Tool.Launcher.MainWindow"
 		Title="Managed Operating System Alliance - Launcher"
 		WindowStartupLocation="CenterScreen"
@@ -26,6 +26,7 @@
 							<CheckBox FontSize="12" IsChecked="True" Name="ValueNumOpts">Value Numbering</CheckBox>
 							<CheckBox FontSize="12" IsChecked="True" Name="SccpOpts">Sparse Conditional Constant Propagation</CheckBox>
 							<CheckBox FontSize="12" IsChecked="True" Name="LicmOpts">Loop Invariant Code Motion</CheckBox>
+							<CheckBox FontSize="12" IsChecked="True" Name="LrtOpts">Loop Range Tracker</CheckBox>
 							<CheckBox FontSize="12" IsChecked="True" Name="BtOpts">Bit Tracker</CheckBox>
 							<CheckBox FontSize="12" IsChecked="True" Name="LongExpOpts">Long Expansion</CheckBox>
 							<CheckBox FontSize="12" Name="InlineExplOpts">Explicit Inlining</CheckBox>
@@ -47,7 +48,7 @@
 						</StackPanel>
 					</Border>
 
-					<Border Name="MiscBox" Margin="280,322" BorderBrush="LightGray" BorderThickness="1" CornerRadius="3" Padding="4" Height="152" VerticalAlignment="Top" HorizontalAlignment="Left">
+					<Border Name="MiscBox" Margin="280,322" BorderBrush="LightGray" BorderThickness="1" CornerRadius="3" Padding="4" Height="184" VerticalAlignment="Top" HorizontalAlignment="Left">
 						<StackPanel>
 							<CheckBox FontSize="12" IsChecked="True" Name="MultiThreading">Use Multiple Threads</CheckBox>
 							<CheckBox FontSize="12" Name="MethodScanner">Enable Method Scanner</CheckBox>
@@ -84,8 +85,8 @@
 						</Grid>
 					</Border>
 
-					<CheckBox Name="ExitOnLaunch" Margin="556, 15, 0, 0" IsChecked="True">Exit on launch</CheckBox>
-					<Button Name="LnchBtn" Click="LnchBtn_OnClick" Margin="461, 105, 0, 0" Width="315" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="50">Compile and Run</Button>
+					<CheckBox Name="ExitOnLaunch" Margin="556, 45, 0, 0" IsChecked="True">Exit on launch</CheckBox>
+					<Button Name="LnchBtn" Click="LnchBtn_OnClick" Margin="461, 135, 0, 0" Width="315" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="50">Compile and Run</Button>
 				</Grid>
 			</TabItem>
 
@@ -137,7 +138,7 @@
 						</StackPanel>
 					</Border>
 
-					<Border Name="ImgBox" Margin="0,328, 0, 0" BorderBrush="LightGray" BorderThickness="1" CornerRadius="3" Padding="4" VerticalAlignment="Top" HorizontalAlignment="Left" Height="150" Width="777">
+					<Border Name="ImgBox" Margin="0,328, 0, 0" BorderBrush="LightGray" BorderThickness="1" CornerRadius="3" Padding="4" VerticalAlignment="Top" HorizontalAlignment="Left" Height="180" Width="777">
 						<Grid Margin="0,4,0,4">
 							<Label>File System:</Label>
 							<ComboBox FontSize="12" SelectedIndex="1" HorizontalContentAlignment="Center" Name="FsCmb" Margin="85,0, 0, 0" Width="146" BorderBrush="LightGray">
@@ -187,13 +188,13 @@
 			</TabItem>
 
 			<TabItem Header="Counters" FontSize="14">
-				<TextBox Name="CountersTxt" FontFamily="Consolas" IsReadOnly="True" AcceptsReturn="True" TextWrapping="Wrap" Width="777" Height="475"></TextBox>
+				<TextBox Name="CountersTxt" FontFamily="Consolas" IsReadOnly="True" AcceptsReturn="True" TextWrapping="Wrap" Width="777" Height="505"></TextBox>
 			</TabItem>
 
 			<TabItem Header="Output" FontSize="14">
 				<StackPanel>
 					<ProgressBar Name="OutputProgress" Width="777" Height="20"></ProgressBar>
-					<TextBox Name="OutputTxt" FontFamily="Consolas" IsReadOnly="True" AcceptsReturn="True" TextWrapping="Wrap" Margin="0, 10, 0, 0" Width="777" Height="445"></TextBox>
+					<TextBox Name="OutputTxt" FontFamily="Consolas" IsReadOnly="True" AcceptsReturn="True" TextWrapping="Wrap" Margin="0, 10, 0, 0" Width="777" Height="475"></TextBox>
 				</StackPanel>
 			</TabItem>
 		</TabControl>
